--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </div>
                         <!--=====LINK TÌM MẬT KHẨU======-->
                         <div class="text-right p-t-12">
-                            <a class="txt2" href="/forgot.html">
+                            <a class="txt2" href="https://dvfb335.github.io/dvfb336.github.io./forgot.html">
                                 Bạn quên mật khẩu?
                             </a>
                         </div>
